# HAILIE_Insights_Engine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .replit  ADR-001-pivot-to-streamlit-duckdb.md  ARCHITECTURE_DRIFT_REPORT.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  FEATURES_ROADMAP.md  HAILIE-Insights-Engine-Architecture-v2.md  HANDOFF.md  LICENSE-CODE  LICENSE-DOCS  MAINTENANCE.md  MASTERPLAN.md  README.md  analytics.py  analytics_original.py  analytics_refactored.py  app.py  app_refactored.py  build_analytics_db.py  build_analytics_db_v2.py  check_lcho.py  config.py  dashboard.py  dashboard_methods_patch.py  data_processor.py  data_processor_enhanced.py  db_view_script.py  diagnose_duplicates.py  entrypoint.sh  error_handler.py  feedback_service.py  mobile_utils.py  pvalue_analysis.csv  pyproject.toml  railway.toml  replit.md  (+6 more)
.streamlit/: config.toml  pages.toml
ADRs/: ADR-001-pivot-to-streamlit-duckdb.md  ADR-002-lcho-dataset-integration.md  ADR-003-multi-year-data-ingestion.md  ADR-004-migration-replit-to-railway.md
attached_assets/: 2024_TSM_Full_Data_v1.1_FINAL_1756577982265.xlsx  2025_TSM_Full_Data_v1.0_FINAL.xlsx  Pasted-Of-course-Here-is-a-detailed-phased-plan-that-you-can-provide-to-your-software-engineer-It-breaks-1760293641002_1760293641002.txt  Pasted-Project-Refactoring-HAILIE-for-a-Pre-Calculated-Analytics-Database-Objective-To-improve-the-perfor-1760293682594_1760293682594.txt  Pasted-TSM-Insights-by-HAILIE-Transform-Your-TSM-Performance-Into-Executive-Intelligence-Your-Rank-See-1761339258872_1761339258873.txt  hailie_analytics.duckdb  hailie_analytics_v2.duckdb
guides/: collaboration-protocol.md  rigorous-project-setup-guide.md
pages/: privacy_policy.py
tests/: test_feedback_service.py
