[project]
name = "hailie-tsm-insights"
version = "3.0.0"
description = "HAILIE TSM Insights Engine - UK Housing Provider Analytics"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.1",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scipy>=1.16.1",
    "sentry-sdk[streamlit]>=2.0.0",
    "streamlit>=1.49.1",
]
