[project]
name = "hailie-insights-engine"
version = "1.0.0"
description = "Transform UK government TSM (Tenant Satisfaction Measures) data into actionable executive insights for social housing providers"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Tom Stephenson (Teev-dev)" },
]
readme = "README.md"
keywords = ["tsm", "social-housing", "analytics", "streamlit", "tenant-satisfaction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Other Audience",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "duckdb>=1.4.1",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scipy>=1.16.1",
    "sentry-sdk>=2.0.0",
    "streamlit>=1.49.1",
]

[project.urls]
Homepage = "https://github.com/Teev-dev/HAILIE_Insights_Engine"
Repository = "https://github.com/Teev-dev/HAILIE_Insights_Engine"
Issues = "https://github.com/Teev-dev/HAILIE_Insights_Engine/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Flat-layout: top-level .py files are the package, ADRs/data/pages/guides are not.
# Without this, setuptools auto-discovery fails on the non-package top-level dirs.
[tool.setuptools]
py-modules = [
    "app",
    "dashboard",
    "analytics_refactored",
    "data_processor_enhanced",
    "config",
    "styles",
    "tooltip_definitions",
    "mobile_utils",
    "tsm_measures",
]
